List proof of concept

--- a/src/Views/user-list.phtml
+++ b/src/Views/user-list.phtml
@@ -1,1 +1,8 @@
 This is user list
+<ul>
+<?php foreach ($viewContext->list as $row): ?>
+	<li>
+		<pre><?php var_dump($row) ?></pre>
+	</li>
+<?php endforeach ?>
+</ul>
