Added missing Facebook logo

--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -15,7 +15,7 @@
 	<?php if (isset($viewContext->meta->description)): ?>
 		<meta property="og:description" content="<?php echo $viewContext->meta->description ?>">
 	<?php endif ?>
-	<meta property="og:image" content="<?php echo UrlHelper::absoluteUrl('/media/img/logo3.png') ?>">
+	<meta property="og:image" content="<?php echo UrlHelper::absoluteUrl('/media/img/logo-fb.png') ?>">
 	<meta property="og:url" content="<?php echo UrlHelper::absoluteUrl() ?>">
 	<meta property="og:site_name" content="MALgraph" />
 
