--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Test</title>
+	<title><?php echo isset($viewContext->meta->title) ? $viewContext->meta->title : 'MALgraph' ?></title>
 	<meta charset="utf-8"/>
 	<?php if (isset($viewContext->meta->keywords)): ?>
 		<meta name="keywords" content="<?php echo implode(',', $viewContext->meta->keywords) ?>">
