--- a/public_html/media/css/core.css
+++ b/public_html/media/css/core.css
@@ -206,3 +206,77 @@ table.tablesorter thead tr .headerSortDown { background: #2D7De0 url('../img/des
 	margin-bottom: 1em;
 	overflow: hidden;
 }
+
+/* form controls */
+label,
+input,
+button,
+select,
+textarea {
+	font-weight: normal;
+}
+
+textarea,
+input {
+	background-color: #fff;
+	border: 1px solid #ccc;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+	transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+}
+select,
+textarea,
+input {
+	border-radius: 4px 4px 4px 4px;
+	color: #555555;
+	display: inline-block;
+	font-size: 14px;
+	height: 20px;
+	line-height: 20px;
+	margin-bottom: 10px;
+	padding: 4px 6px;
+	vertical-align: middle;
+}
+
+.btn {
+	background: #f5f5f5 linear-gradient(to bottom, #fff, #e6e6e6) repeat-x;
+	box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
+	border: 1px solid #bbb;
+	border-color: #bbb #bbb #a2a2a2;
+	border-radius: 4px;
+	color: #333;
+	cursor: pointer;
+	font-size: 14px;
+	line-height: 20px;
+	padding: 4px 12px;
+	text-align: center;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+}
+
+.input-append input,
+.input-prepend input,
+.input-append select,
+.input-prepend select {
+	border-radius: 0 4px 4px 0;
+	margin-bottom: 0;
+	position: relative;
+	vertical-align: top;
+}
+
+.input-apend .add-on:last-child,
+.input-append .btn:last-child {
+	border-radius: 0 4px 4px 0;
+}
+.input-append .add-on,
+.input-prepend .add-on,
+.input-append .btn,
+.input-prepend .btn {
+	vertical-align: top;
+}
+.input-append, .input-prepend {
+	font-size: 0;
+	white-space: nowrap;
+}
+.input-append input,
+.input-append select {
+	border-radius: 4px 0 0 4px;
+}
