--- a/public_html/media/css/header.css
+++ b/public_html/media/css/header.css
@@ -11,19 +11,22 @@
 	margin: 0;
 }
 #header ul {
-	float: left;
+	float: right;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
 #header ul li {
 	display: inline-block;
-	padding: 0 1em;
+	padding: 0 0 0 1em;
 	margin: 0;
-	text-align: middle;
+	vertical-align: middle;
 }
 #header ul li:first-child {
 	padding-left: 0;
+}
+#logo {
+	float: left;
 }
 #logo a {
 	display: inline-block;
@@ -38,7 +41,8 @@
 }
 
 #header .search {
-	float: right;
-	text-align: middle;
+	float: left;
+	margin-left: 1.5em;
+	vertical-align: middle;
 	line-height: 30px;
 }
