--- a/public_html/media/css/index/index.css
+++ b/public_html/media/css/index/index.css
@@ -1,61 +1,54 @@
-#menu {
-	display: none;
-}
 #main {
 	font-size: 11pt;
 	width: 100%;
 }
-#logo {
-	opacity: .5;
+
+.bigscreen {
+	margin-top: -1em;
+	background: #f5f5f5;
+	box-shadow: 0 0.5em 0.5em -0.5em silver;
 }
+
+.left-wrapper {
+	width: 65%;
+	float: left;
+	display: table;
+	height: 20em;
+	background: #fafafa;
+}
+	.left {
+		display: table-cell;
+		width: 100%;
+		vertical-align: middle;
+		text-align: center;
+		font-size: 18pt;
+		font-weight: bolder;
+	}
+
+.right-wrapper {
+	width: 35%;
+	float: right;
+}
+	.right {
+		padding: 1em;
+	}
+	.right form {
+		margin: 1
+		padding: 0;
+	}
 
 .center {
 	text-align: center;
-	padding-top: 3em;
+	margin-top: 1em;
 }
-	.center form {
-		padding-top: 1.5em;
-	}
-	.center .links {
-		padding-top: 2.5em;
-	}
 
 div.about-mal {
 	display: none;
-	margin-top: 1em;
+	text-align: left;
+	width: 75%;
+	margin: 1em auto;
 }
 span.bull {
 	margin: 0 1em;
 	display: inline-block;
-}
-
-#main form p {
-	display: inline-block;
-	margin: 0 2em 0 0;
-	vertical-align: middle;
-}
-#main form div {
-	display: inline-block;
-	box-shadow: 0 0 4px rgba(25, 105, 203, 0.4);
-	margin: 0;
-	vertical-align: middle;
-	width: 226px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;
-}
-#main form input,
-#main form button {
-	margin: 0;
-	border: 1px solid #1969cb;
-}
-
-p.sub {
-	position: relative;
-	text-align: left;
-	margin: 0 auto;
-	width: 420px;
-	top: -4.25em;
-	left: 22px;
-	font-size: 10pt;
-	color: gray;
 }
