--- a/src/Views/index.phtml
+++ b/src/Views/index.phtml
@@ -1,7 +1,8 @@
 <div class="bigscreen">
 <div class="left-wrapper">
 <div class="left">
-	<p>An extension of your<br><a target="_blank" href="http://myanimelist.net">MyAnimeList</a> profile.</p>
+	<p class="big">MALgraph</p>
+	<p class="small">An extension of your<br><a target="_blank" href="http://myanimelist.net">MyAnimeList</a> profile.</p>
 </div>
 </div>
 
