--- a/public_html/media/css/index/index.css
+++ b/public_html/media/css/index/index.css
@@ -5,7 +5,7 @@
 
 .bigscreen {
 	margin-top: -1em;
-	background: #f5f5f5;
+	background: #fafafa;
 	box-shadow: 0 0.5em 0.5em -0.5em silver;
 }
 
@@ -14,27 +14,38 @@
 	float: left;
 	display: table;
 	height: 20em;
-	background: #fafafa;
 }
 	.left {
 		display: table-cell;
 		width: 100%;
 		vertical-align: middle;
 		text-align: center;
-		font-size: 18pt;
-		font-weight: bolder;
+		font-weight: bold;
 	}
+		.left .big {
+			font-size: 22pt;
+			margin: 0;
+		}
+		.left .small {
+			font-size: 16pt;
+		}
+
 
 .right-wrapper {
 	width: 35%;
 	float: right;
+	min-height: 20em;
+	background: #f5f5f5;
 }
 	.right {
 		padding: 1em;
 	}
 	.right form {
-		margin: 1
+		margin: 1em 1em 1em 0;
 		padding: 0;
+	}
+	.right input {
+		width: 100%;
 	}
 
 .center {
