Added user pictures

--- a/src/Views/user-menu.phtml
+++ b/src/Views/user-menu.phtml
@@ -4,7 +4,7 @@
 		<?php if (empty($viewContext->userPictureUrl)): ?>
 			<img class="profile unavailable" alt="No profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>">
 		<?php else: ?>
-			<img class="profile" alt="<?php echo $user->getPublicName() ?>&rsquo;s profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>" style="background-image: url('<?php echo $viewContext->userPictureUrl ?>')">
+			<img class="profile" alt="<?php echo $viewContext->userName ?>&rsquo;s profile picture" src="<?php echo UrlHelper::absoluteUrl('/media/img/pixel.gif') ?>" style="background-image: url('<?php echo $viewContext->userPictureUrl ?>')">
 		<?php endif ?>
 		</a>
 	</div>
